Sun Dec 13 18:45:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (parse_mode_enc): fix buffer overflow.

Sun Dec 13 18:35:57 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/fiddle/function.c (initialize): check all arguments first.
	  reported by Marcin 'Icewall' Noga of Cisco Talos.

	* ext/fiddle/conversions.h (PTR2NUM): use signed integer to make
	  Fixnum for negative values.

Sun Dec 13 18:33:41 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (pack_pack): always check index range against the
	  receiver array length, which can be shortened by elements
	  conversion.  reported by Marcin 'Icewall' Noga of Cisco Talos.

Sun Dec 13 18:28:52 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/psych/psych_emitter.c (start_document): should not exceed
	  tags array range.

	* ext/psych/psych_emitter.c (start_document): ensure string before
	  encoding conversion.

Sun Dec 13 18:26:31 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tkutil/tkutil.c (tk_hash_kv): check types of array
	  argument.  reported by Marcin 'Icewall' Noga of Cisco Talos.

	* ext/tk/tkutil/tkutil.c (cbsubst_table_setup): check length of
	  argument arrays for each access, as callback methods can modify
	  them.  reported by Marcin 'Icewall' Noga of Cisco Talos.

	* ext/tk/tkutil/tkutil.c (cbsubst_table_setup): check types of
	  argument elements.  reported by Marcin 'Icewall' Noga of Cisco
	  Talos.

Sun Dec 13 18:19:20 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32ole/win32ole.c (ole_vstr2wc): check argument type, vstr
	  must be a String here.  reported by Marcin 'Icewall' Noga of
	  Cisco Talos.

Sun Dec 13 16:41:01 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (BOOTSTRAPRUBY): make BASERUBY full path before
	  building ruby to get rid of unexpectedly invoking built ruby.
	  [ruby-core:72065] [Bug #11807]

	* configure.in (BOOTSTRAPRUBY): use MINIRUBY but not BASERUBY
	  unless cross compiling.  [ruby-core:72065] [Bug #11807]
